Fix layout issues: inconsistent font size

--- a/source/stylesheets/partials/_layouts.scss
+++ b/source/stylesheets/partials/_layouts.scss
@@ -46,7 +46,7 @@ article {
 
   }
 
-  ul {
+  ul, ol {
     margin-bottom: 1em;
     padding-left: 20px;
   }
@@ -57,6 +57,7 @@ article {
 
     ol {
       margin-bottom: 1em;
+      padding-left: 20px;
     }
   }
 
